--- a/AnalogSea.html
+++ b/AnalogSea.html
@@ -19,7 +19,7 @@
 		<input type="email" name="Email" id="Email" placeholder="foo@bar.com" required>
 
 	<label for="Password">Password</label>
-		<input type="text" name="Password" id="Password" placeholder="1234passw0rd" required>
+		<input type="password" name="Password" id="Password" placeholder="1234passw0rd" required>
 
 	<button formaction="/signup/" type="submit">Sign Up</button>
 	
